# agentic_search

./: .gitignore  README.md  app.py  browserbase_tools.py  images.py  local_workspace.py  models.py  prompts.py  pyproject.toml  utils.py
agentic_search/: README.md  files.py  images.py  models.py  prompts.py  requirements.txt  utils.py
agentic_search/.agentic_search_runs/local-request-id/notes/: final_answer.md  query_variations.md  run.md  search_reports.md
agentic_search/.agentic_search_runs/local-request-id/pages/: apis-and-sdks---browserbase-documentation__5c5129981b.md  documentation---browserbase-documentation__a1cadcb224.md  https-docs.browserbase.com-search-cms-keys-explain-browserbase__9841750979.md  page-not-found__9e1d35a157.md  what-is-browserbase---browserbase-documentation__eb87b9006e.md
agentic_search/.agentic_search_runs/local-request-id/tools/: 001_search_site.md  002_fetch_page.md  002_search_site.md  003_fetch_page.md  003_fetch_relevant_snippets.md  003_read_local_file.md  003_search_site.md  004_fetch_page.md  004_read_local_file.md  004_search_site.md  005_fetch_page.md  005_fetch_relevant_snippets.md  005_search_site.md  006_fetch_page.md  006_fetch_relevant_snippets.md  006_read_local_file.md  006_search_site.md  007_fetch_page.md  007_list_local_files.md  007_read_local_file.md  008_fetch_page.md  008_rg.md  010_read_local_file.md  011_read_local_file.md
frontend/: .env.local.example  .gitignore  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/search/: route.ts
(+1 files in other folders)
